Tuesday, February 12, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed Point<>:origin() to Point<>::setToOrigin()
	* Added assert() checks on array indices passed to
	  many functions

Tuesday, February 12, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added Equal() template to call foo->isEqualTo().
	* Replaced "const CoordType&" with CoordType everywhere it
	  was used.
	* Got rid of scaleEpsilon member function in Point<> in favor
	  of calling _ScaleEpsilon directly, minimized use of
	  _scaleEpsilon member function in Vector<>
	* Improved efficiency of some member functions in Segment<>
	* Got rid of <iostream> in wrapped_array.h, got rid of
	  MINIBALL_NO_STD_NAMESPACE test on whether to include
	  <list> or <list.h> and <cassert> or <assert.h> (since
	  we're including them as <list> and <assert.h> elsewhere),
	  got rid of miniball_config.h

Friday, February 1, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed IsFloatEqual() to Equal(), removed FloatAdd()
	  and FloatSubtract(), vastly improved precision checks
	  for round-off error. The intersection functions still
	  need to be audited to make sure they're handling it
	  right.
	* API change, increment version to 0.2.3

Monday, January 28, 2002	Ron Steinke <rsteinke@w-link.net>

	* Cleanups to const.h, const.cpp suggested by Jesse Jones
	  in the code review, and associated repurcussions to the
	  rest of the codebase.

Friday, January 25, 2002	Ron Steinke <rsteinke@w-link.net>

	* Some efficiency improvements and generalizations to the
	  backend of the probability functions
	* Wrote Polygon<3> intersections with AxisBox<3> and RotBox<3>

Thursday, January 24, 2002	Ron Steinke <rsteinke@w-link.net>

	* Karsten's Makefile.am fixes for srcdir != builddir
	* New probability distribution functions, Gaussian
	  and Poisson distributions
	* Increment version to 0.2.2

Tuesday, January 22, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed namespace from WF::Math to WFMath